# complex

./: .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.complex/: agents.json  events.jsonl  graph.json
.complex/archive/: AY37.md  GZ1W.md  KfdK.md  archive.json  archive.jsonl  dUjp.md  esX7.md  fXqd.KKxP.md  fXqd.QiTr.md  fXqd.WArI.md  fXqd.md  fXqd.oGoY.md  fXqd.oew5.md  fXqd.xpZC.md  mDmw.md
.complex/events/: 2026-03.jsonl  2026-04-02T02-48-20.956606561+00-00.jsonl  2026-04-02T02-48-29.701405543+00-00.jsonl  2026-04-02T17-19-58.804865112+00-00.jsonl  2026-04-02T17-20-02.471438809+00-00.jsonl  2026-04-02T17-20-02.475916739+00-00.jsonl  2026-04-02T17-22-32.803818737+00-00.jsonl  2026-04-02T17-24-12.902914812+00-00.jsonl  2026-04-02T17-24-12.902963980+00-00.jsonl  2026-04-02T17-24-12.902999519+00-00.jsonl  2026-04-02T17-24-12.903033168+00-00.jsonl  2026-04-02T17-24-12.903066407+00-00.jsonl  2026-04-02T17-24-12.903099756+00-00.jsonl  2026-04-02T17-24-12.903134444+00-00.jsonl  2026-04-02T17-24-12.903167523+00-00.jsonl  2026-04-02T17-24-12.903201052+00-00.jsonl  2026-04-02T17-24-12.903232381+00-00.jsonl  2026-04-02T17-24-12.903263780+00-00.jsonl  2026-04-02T17-24-12.903295538+00-00.jsonl  2026-04-02T17-24-12.903327467+00-00.jsonl  2026-04-02T17-24-12.903359036+00-00.jsonl  2026-04-02T17-24-12.903390505+00-00.jsonl  2026-04-02T17-24-12.903421834+00-00.jsonl  2026-04-02T17-24-12.903453543+00-00.jsonl  (+10 more)
docs/: design.md  orchestration-design.md
src/: agent.rs  db.rs  id.rs  log.rs  main.rs  model.rs  store.rs
tests/: integration.rs
(+82 files in other folders)
