[package]
name = "complex"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
